--- a/style.css
+++ b/style.css
@@ -8,12 +8,52 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  font-size: 120%;
+  width: calc(100% - 100px);
 }
 .card {
-  background: #eaeaea;
+  background: #000000d0;
+  color: white;
   padding: 2em;
   border-radius: 30px;
   width: 100%;
   max-width: 420px;
   margin: 1em;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-bar {
+  border: none;
+  outline: none;
+  padding: 0.5em 1em;
+  border-radius: 24px;
+  background: #7c7c7c2b;
+  color: white;
+  font-family: inherit;
+  font-size: 100%;
+}
+
+button {
+  border-radius: 50%;
+  margin: 0.5em;
+  border: none;
+  height: 44px;
+  width: 44px;
+  outline: none;
+  background: #7c7c7c2b;
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+button:hover {
+  background-color: #7c7c7c6b !important;
+}
+
+.temp {
+    margin: 0;
 }
